Cacti CHANGELOG

0.8.7a
-bug#0001043: Graph Templates drop down populates with duplicates
-bug#0001046: Upgrade from 0.8.6j to 0.8.7 defaults to Authentication Method NONE
-bug#0001055: "half hour" not the "gnu Date input formats'
-bug#0001058: Graph Filter Dropdowns to Not Respect Security Settings for User
-bug#0001060: rrdtool 1.2.15 complain for garbage characters when rrdtool_function_xport is used
-bug#0001061: cmd.php: potential call to invalid "availability_method" key on wrong hash
-bug#0001064: speed up the logfile viewer and reduce the memory usage of it
-security#0001059: SQL injection

0.8.7
-bug#0000480: Fix error after altering graphs displayed per page
-bug#0000740: Add support for setting the PHP session name of Cacti
-bug#0000829: Add support for an specifying an uptime OID for SNMP queries
-bug#0000830: Add filtering graphs by Graph Template
-bug#0000833: Add favicon.ico support
-bug#0000850: Add Select All for graph list view
-bug#0000854: Move "Downed Host Detection" into the device edit screen
-bug#0000873: Fix issues with the poller hanging in certain situations
-bug#0000876: Add ability to search for host with a not UP status
-bug#0000898: Selecting a CUSTOM timespan and then CLEARing yields "LAST HALF HOUR" preset
-bug#0000899: Add local checking to the Paths tab on the Settings page
-bug#0000902: Fix issues with cmd.php and PHP 4.4.1 under windows
-bug#0000903: snmpgetnext function does not exist in PHP less than 5.0
-bug#0000904: Data Source creation fails without php-snmp
-bug#0000906: Every tenth host does not show on tree during console edit
-bug#0000907: Sorting of data sources when interface numbers are used without leading zeros are incorrectly sorted
-bug#0000908: Graphs created by SNMP data queries are losing their specific names if the template is modified
-bug#0000910: Cacti complains when trying to set the data source "maximum value" to any number with a decimal point